- Add a XMPP server list in Account widget - Fix CSS overflow error in Notifs - Add some help messages in Account widget

--- a/themes/movim/css/style2.css
+++ b/themes/movim/css/style2.css
@@ -485,3 +485,21 @@ span#widgettitle {
 	background-color: #444444;
 	color: white;
 }
+
+/* Table */
+table thead {
+    font-weight: bold;
+}
+
+table thead tr td {
+    text-align: center;
+}
+
+table tbody tr:nth-child(2n+1) {
+    background-color: rgba(0, 0, 0, 0.1);
+}
+
+table tbody tr td {
+    vertical-align: middle;
+    padding: 0.3em;
+}
